# auric-tui

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  release.yml
Formula/: auric.rb
config/: default.toml
crates/auric-app/: Cargo.toml
crates/auric-app/src/: lib.rs  main.rs  update.rs
crates/auric-audio/: Cargo.toml
crates/auric-audio/src/: lib.rs  player.rs
crates/auric-core/: Cargo.toml
crates/auric-core/src/: lib.rs
crates/auric-drift/: Cargo.toml  cbindgen.toml
crates/auric-drift/include/: auric_drift.h  module.modulemap
crates/auric-drift/src/: analyzer.rs  camelot.rs  engine.rs  ffi.rs  genre.rs  lib.rs  types.rs
crates/auric-drift/tests/: analyzer_tests.rs  camelot_tests.rs  engine_tests.rs
crates/auric-library/: Cargo.toml
crates/auric-library/src/: db.rs  lib.rs  scan.rs  watch.rs
crates/auric-net/: Cargo.toml
crates/auric-net/src/: lib.rs
crates/auric-ui/: Cargo.toml
crates/auric-ui/src/: artwork.rs  browse.rs  file_browser.rs  lib.rs  modal.rs  seekbar.rs  shell.rs  terminal_caps.rs  theme.rs  visualizer.rs
docs/: ARCHITECTURE.md  ROADMAP.md  UX.md
docs/superpowers/plans/: 2026-04-14-audit-remediation.md  2026-04-15-audio-playback-engine.md  2026-04-15-auric-drift-crate.md  2026-04-15-library-onboarding-and-ui-refresh.md  2026-04-16-rich-tui-experience.md
docs/superpowers/specs/: 2026-04-15-audio-playback-engine-design.md  2026-04-15-library-onboarding-and-ui-refresh-design.md
packaging/aur/: PKGBUILD
packaging/scoop/: auric.json
src/: app.rs  main.rs
src/audio/: mod.rs  player.rs  spectrum.rs
src/config/: mod.rs  persistence.rs  theme.rs
src/events/: input.rs  mod.rs  watcher.rs
src/ui/: album_art.rs  file_browser.rs  layout.rs  library_panel.rs  mod.rs  now_playing.rs  spectrum.rs  track_list.rs
themes/: auric-dark.toml  auric-light.toml
