[package]
name = "auric-tui"
version = "0.1.0"
edition = "2021"
description = "A terminal-based lossless audio player with rich TUI"
authors = ["Rob"]
license = "MIT"
readme = "README.md"
keywords = ["music", "audio", "player", "tui", "terminal"]
categories = ["multimedia::audio", "command-line-utilities"]

[[bin]]
name = "auric-tui"
path = "src/main.rs"

[dependencies]
# TUI Framework
ratatui = "0.30"
crossterm = "0.28"

# Audio
rodio = "0.19"
symphonia = { version = "0.5", features = ["all"] }
rustfft = "6.2"

# Metadata
lofty = "0.21"

# Album Art Fetching
musicbrainz_rs = { version = "0.12", default-features = false, features = ["async", "default_tls"] }
reqwest = { version = "0.12", features = ["json"] }

# Album Art
ratatui-image = { version = "10.0", default-features = false, features = ["crossterm", "image-defaults"] }
image = "0.25"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# File Watching
notify = "6"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization (minimal - for config only)
serde = { version = "1", features = ["derive"] }

# Error Handling
anyhow = "1"
thiserror = "1"

# Utilities
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
