[package]
name = "auric-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "auric"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
uuid.workspace = true
auric-drift.workspace = true
auric-audio = { path = "../auric-audio" }
auric-core = { path = "../auric-core" }
auric-library = { path = "../auric-library" }
auric-ui = { path = "../auric-ui" }
walkdir.workspace = true

[dev-dependencies]
tempfile = "3"
