[package]
name = "auric-library"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
walkdir.workspace = true
lofty.workspace = true
notify.workspace = true
sha2.workspace = true
auric-core = { path = "../auric-core" }

[dev-dependencies]
tempfile = "3"
