[package]
name = "auric-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
crossterm.workspace = true
ratatui.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
auric-core = { path = "../auric-core" }

[dev-dependencies]
tempfile = "3"
